Fix tab spacing

--- a/web/themes/custom/wvuonline2018/components/_patterns/03-organisms/tabbed-content/_tabbed-content.scss
+++ b/web/themes/custom/wvuonline2018/components/_patterns/03-organisms/tabbed-content/_tabbed-content.scss
@@ -46,7 +46,7 @@
   &__link {
     border: none;
     border-top: 4px solid transparent;
-    top: 0;
+    top: -1px;
     padding: 0.2em !important;
     display: flex !important;
     flex-direction: column;
